syntax = "proto3";
package goserver.api.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

option go_package = "api/v1";

// User role enumeration.
enum Role {
  // Unspecified role.
  ROLE_UNSPECIFIED = 0;
  // Admin role with system access.
  ROLE_ADMIN = 1;
  // User role with limited access.
  ROLE_USER = 2;
}

message User {
  int64 id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string username = 2 [(google.api.field_behavior) = REQUIRED];
  string email = 3 [(google.api.field_behavior) = REQUIRED];
  string nickname = 4 [(google.api.field_behavior) = REQUIRED];
  string phone = 5 [(google.api.field_behavior) = REQUIRED];
  Role role = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp password_expires_at = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp created_at = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp updated_at = 9 [(google.api.field_behavior) = OUTPUT_ONLY];
}
